--- a/LED/LED.ioc
+++ b/LED/LED.ioc
@@ -69,7 +69,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=LED.ioc
 ProjectManager.ProjectName=LED
-ProjectManager.ProjectStructure=
+ProjectManager.ProjectStructure=   32423
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
