--- a/LED/LED.ioc
+++ b/LED/LED.ioc
@@ -54,13 +54,13 @@ ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
+ProjectManager.Dgit eletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.5
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=true
+ProjectManager.KeepUserCode=truesdfsdfds
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
