--- a/LED_Key/LED_Key.ioc
+++ b/LED_Key/LED_Key.ioc
@@ -18,7 +18,7 @@ Mcu.Pin1=PD1-OSC_OUT
 Mcu.Pin2=PA5
 Mcu.Pin3=PA13
 Mcu.Pin4=PA14
-Mcu.Pin5=PB6
+Mcu.Pin5=PB6dsafgsdge
 Mcu.Pin6=VP_SYS_VS_Systick
 Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
