--- a/LED_Key/LED_Key.ioc
+++ b/LED_Key/LED_Key.ioc
@@ -12,7 +12,7 @@ Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Package=LQFP48
+Mcu.Package=LQFP48hjasdfguaigf
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
 Mcu.Pin2=PA5
