--- a/LED_Key/LED_Key.ioc
+++ b/LED_Key/LED_Key.ioc
@@ -14,7 +14,7 @@ Mcu.IPNb=3
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48hjasdfguaigf
 Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin1=PD1-OSC_OUTsdfgsfg
 Mcu.Pin2=PA5
 Mcu.Pin3=PA13
 Mcu.Pin4=PA14
