--- a/oscilloscope/oscilloscope.ioc
+++ b/oscilloscope/oscilloscope.ioc
@@ -10,45 +10,38 @@ CAN1.CalculateTimeQuantum=142.85714285714286
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,Mode
 CAN1.Mode=CAN_MODE_NORMAL
 CAN1.Prescaler=6
-CAN2.BS1=CAN_BS1_4TQ
-CAN2.BS2=CAN_BS2_2TQ
-CAN2.CalculateBaudRate=1000000
-CAN2.CalculateTimeBit=1000
-CAN2.CalculateTimeQuantum=142.85714285714286
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler
-CAN2.Prescaler=6
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;can1,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;myTask03,-3,128,StartTask03,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;can1,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;uart,-3,128,StartTask03,Default,NULL,Dynamic,NULL,NULL;pwm,-3,128,StartTask04,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
-Mcu.IP1=CAN2
-Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
+Mcu.IP1=FREERTOS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM9
 Mcu.IP6=USART1
 Mcu.IPNb=7
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin13=VP_SYS_VS_tim5
+Mcu.Pin10=PA14
+Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin12=VP_SYS_VS_tim5
+Mcu.Pin13=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PB12
-Mcu.Pin5=PB13
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
+Mcu.Pin4=PA2
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA13
 Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -82,12 +75,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Signal=S_TIM9_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB12.Mode=CAN_Activate
-PB12.Signal=CAN2_RX
-PB13.Mode=CAN_Activate
-PB13.Signal=CAN2_TX
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -125,7 +115,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -157,11 +147,19 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
+SH.S_TIM9_CH1.ConfNb=1
+TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM9.IPParameters=Channel-PWM Generation1 CH1,Period,Pulse-PWM Generation1 CH1
+TIM9.Period=300
+TIM9.Pulse-PWM\ Generation1\ CH1=500
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim5.Mode=TIM5
 VP_SYS_VS_tim5.Signal=SYS_VS_tim5
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
